UPDIS-165 - 现在sso引出的问题实在太多了，考虑使用cookie做单点登录的可行性

--- a/updis_sso/readme
+++ b/updis_sso/readme
@@ -25,3 +25,8 @@
 4.
 erp 配置文件添加：
     domain= .updis.cn
+
+5.
+修改web/static/src/js/chrome.js
+    中的 on_logout:
+    最后一行变成 window.location='http://cms.updis.cn';
