UPDIS-193 视频发布投票系统

--- a/vote/i18n/zh_CN.po
+++ b/vote/i18n/zh_CN.po
@@ -58,7 +58,7 @@ msgstr "投票标志图片"
 #. module: vote
 #: model:ir.ui.menu,name:vote.menu_vote_record_management
 msgid "Vote Record Management"
-msgstr "投票条目标志图片"
+msgstr "投票条目管理"
 
 #. module: vote
 #: view:updis.vote.record:0
