--- a/oecn_base_fonts/i18n/en_US.po
+++ b/oecn_base_fonts/i18n/en_US.po
@@ -4,10 +4,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: OpenERP Server 6.1\n"
+"Project-Id-Version: OpenERP Server 7.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-08-18 08:44+0000\n"
-"PO-Revision-Date: 2012-08-18 08:44+0000\n"
+"POT-Creation-Date: 2013-03-27 07:25+0000\n"
+"PO-Revision-Date: 2013-03-27 07:25+0000\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -16,97 +16,96 @@ msgstr ""
 "Plural-Forms: \n"
 
 #. module: oecn_base_fonts
-#: field:oecn_base_fonts.map,name:0
-msgid "Font Alias"
-msgstr "Font Alias"
-
-#. module: oecn_base_fonts
-#: field:oecn_base_fonts.config,map_ids:0
-msgid "Replace Fonts"
-msgstr "Replace Fonts"
-
-#. module: oecn_base_fonts
-#: model:ir.model,name:oecn_base_fonts.model_oecn_base_fonts_map
-msgid "oecn_base_fonts.map"
-msgstr "oecn_base_fonts.map"
-
-#. module: oecn_base_fonts
-#: field:oecn_base_fonts.map,pdf_font:0
-msgid "Original Fonts"
-msgstr "Original Fonts"
-
-#. module: oecn_base_fonts
-#: view:oecn_base_fonts.config:0
-msgid "Font replace"
-msgstr "Font replace"
-
-#. module: oecn_base_fonts
-#: field:oecn_base_fonts.config,config_logo:0
-msgid "Image"
-msgstr "Image"
-
-#. module: oecn_base_fonts
+#: model:ir.model.fields,field_description:oecn_base_fonts.field_oecn_base_fonts_map_new_font
 #: field:oecn_base_fonts.map,new_font:0
 msgid "Replaced With"
 msgstr "Replaced With"
 
 #. module: oecn_base_fonts
-#: view:oecn_base_fonts.config:0
-msgid "Fonts Mapping Configuration"
-msgstr "Fonts Mapping Configuration"
+#: model:ir.model.fields,field_description:oecn_base_fonts.field_oecn_base_fonts_map_name
+#: field:oecn_base_fonts.map,name:0
+msgid "Font Alias"
+msgstr "Font Alias"
 
 #. module: oecn_base_fonts
-#: model:ir.model,name:oecn_base_fonts.model_oecn_base_fonts
-msgid "Register system fonts to replace pdf fonts"
-msgstr "Register system fonts to replace pdf fonts"
+#: model:ir.actions.act_window,name:oecn_base_fonts.action_font_configuration_installer
+msgid "Configure Font Mapping"
+msgstr "Configure Font Mapping"
+
+#. module: oecn_base_fonts
+#: model:ir.model.fields,field_description:oecn_base_fonts.field_oecn_base_fonts_map_pdf_font
+#: field:oecn_base_fonts.map,pdf_font:0
+msgid "Original Fonts"
+msgstr "Original Fonts"
+
+#. module: oecn_base_fonts
+#: view:base.config.settings:0
+msgid "Configure Your Fonts"
+msgstr "Configure Your Fonts"
+
+#. module: oecn_base_fonts
+#: model:ir.model,name:oecn_base_fonts.model_base_config_settings
+msgid "base.config.settings"
+msgstr "base.config.settings"
+
+#. module: oecn_base_fonts
+#: view:oecn.font.installer:0
+msgid "Font replace"
+msgstr "Font replace"
 
 #. module: oecn_base_fonts
 #: help:oecn_base_fonts.map,name:0
-msgid "use this font alias                 in custom rml report template"
-msgstr "use this font alias                 in custom rml report template"
+msgid "use this font alias in custom rml report                             template"
+msgstr "use this font alias in custom rml report                             template"
 
 #. module: oecn_base_fonts
-#: model:ir.actions.act_window,name:oecn_base_fonts.action_config_fonts_map
-msgid "Configure Fonts Mapping for pdf reports"
-msgstr "Configure Fonts Mapping for pdf reports"
+#: view:oecn.font.installer:0
+msgid "Continue"
+msgstr "Continue"
 
 #. module: oecn_base_fonts
-#: view:oecn_base_fonts.config:0
-msgid "res_config_contents"
-msgstr "res_config_contents"
+#: view:oecn.font.installer:0
+msgid "Customer Font Mapping Configuration"
+msgstr "Customer Font Mapping Configuration"
 
 #. module: oecn_base_fonts
-#: field:oecn_base_fonts.map,map_id:0
-msgid "Font Map"
-msgstr "Font Map"
+#: help:oecn.font.installer,wrap:0
+msgid "If you are using CJK fonts,                                check this option will wrap your                                words properly at the edge of the  pdf report"
+msgstr "If you are using CJK fonts,                                check this option will wrap your                                words properly at the edge of the  pdf report"
 
 #. module: oecn_base_fonts
-#: view:oecn_base_fonts.config:0
-msgid "pdf font support for your language"
-msgstr "pdf font support for your language"
+#: model:ir.model,name:oecn_base_fonts.model_oecn_base_fonts_map
+msgid "The line base fonts mapping"
+msgstr "The line base fonts mapping"
 
 #. module: oecn_base_fonts
-#: view:oecn_base_fonts.config:0
+#: view:base.config.settings:0
+msgid "RML Rrepot Font"
+msgstr "RML Rrepot Font"
+
+#. module: oecn_base_fonts
+#: view:oecn.font.installer:0
 msgid "title"
 msgstr "title"
 
 #. module: oecn_base_fonts
-#: field:oecn_base_fonts.config,wrap:0
+#: model:ir.model.fields,field_description:oecn_base_fonts.field_oecn_font_installer_wrap
+#: field:oecn.font.installer,wrap:0
 msgid "CJK wrap"
 msgstr "CJK wrap"
 
 #. module: oecn_base_fonts
-#: help:oecn_base_fonts.config,wrap:0
-msgid "If you are using CJK fonts, check this option will wrap your             words properly at the edge of the  pdf report"
-msgstr "If you are using CJK fonts, check this option will wrap your             words properly at the edge of the  pdf report"
+#: model:ir.model.fields,field_description:oecn_base_fonts.field_oecn_font_installer_map_ids
+#: field:oecn.font.installer,map_ids:0
+msgid "Replace Fonts"
+msgstr "Replace Fonts"
 
 #. module: oecn_base_fonts
-#: model:ir.model,name:oecn_base_fonts.model_oecn_base_fonts_config
-msgid "oecn_base_fonts.config"
-msgstr "oecn_base_fonts.config"
+#: view:oecn.font.installer:0
+msgid "Fonts used in the default report may not support the characters in your lanuage. Use the setting here to replace the Original font with the font you choose."
+msgstr "Fonts used in the default report may not support the characters in your lanuage. Use the setting here to replace the Original font with the font you choose."
 
 #. module: oecn_base_fonts
-#: view:oecn_base_fonts.config:0
-msgid "Fonts used in the default report may not support the characters in your lanuage. Use the setting here to replace the Original font with the font you choose"
-msgstr "Fonts used in the default report may not support the characters in your lanuage. Use the setting here to replace the Original font with the font you choose"
-
+#: model:ir.model,name:oecn_base_fonts.model_oecn_font_installer
+msgid "oecn.font.installer"
+msgstr "oecn.font.installer"
