UPDIS-297 - 翻译：项目首页 的 项目文件改成项目流程

--- a/up_project/i18n/zh_CN.po
+++ b/up_project/i18n/zh_CN.po
@@ -775,8 +775,8 @@ msgstr "项目 经营室"
 
 #. module: up_project
 #: view:project.project:0
-msgid "Project Document"
-msgstr "项目文件"
+msgid "Project Process"
+msgstr "项目流程"
 
 #. module: up_project
 #: model:ir.actions.server,name:up_project.project_active_tasking_engineer_room_send_sms
