UPDIS-325 - 项目归档增加一个确认流程

--- a/up_project/i18n/zh_CN.po
+++ b/up_project/i18n/zh_CN.po
@@ -1786,5 +1786,10 @@ msgstr "项目停滞"
 
 #. module: up_project
 #: selection:project.project,state:0
+msgid "Project Filing"
+msgstr "项目归档中"
+
+#. module: up_project
+#: selection:project.project,state:0
 msgid "Project Filed"
-msgstr "项目归档"
+msgstr "项目已归档"
